# RustTodo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: errors.rs  handlers.rs  main.rs  models.rs  state.rs  storage.rs
static/: index.html  script.js  style.css
