[package]
name = "TodoRust"
version = "0.1.0"
authors = ["Michal Švrček"]
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
uuid = "1.23.4"
